--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "countup": "^1.8.2",
+    "icons": "^1.0.0",
     "react": "^18.3.1",
+    "react-accessible-accordion": "^5.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.4"
