--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-outside-click-handler": "^1.3.0",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.4"
